--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -11,3 +11,8 @@ sky:
     access-key-id: ${ALIYUNN_ACCESS_KEY_ID}
     access-key-secret: ${ALIYUNN_ACCESS_KEY_SECRET}
     bucket-name: tfory
+  redis:
+    host: localhost
+    port: 6379
+    password: 123456
+    database: 0
