商品浏览业务功能代码开发 和 套餐管理的全部代码开发

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -16,3 +16,6 @@ sky:
     port: 6379
     password: 123456
     database: 0
+  wechat:
+    appid: wxcce47f315db93932
+    secret: f1bdb743a6f2ecf4825bb7447a25ae72
